[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jupiter-subtes"
version = "0.1.0"
description = "Biblioteca para automatização web nos sistemas do Tesouro do Estado do Rio de Janeiro"
readme = "README.md"
authors = [{ name = "EOP/SUPCONC"}]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "selenium",
    "automaweb",
]

[project.urls]
"Homepage" = "https://github.com/bvkila/jupiter"